--- a/semestr/templates/reg.html
+++ b/semestr/templates/reg.html
@@ -6,29 +6,40 @@
     <title>Registration</title>
     <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta.25/shoelace.css">
     <style>
-        html {
-            background: ;
-        }
+
 
         fieldset {
             position: absolute;
             right: 460px;
-            top: 100px;
+            top: 260px;
             width: 550px;
             height: 400px;
+            background-color: white;
 
+        }
+
+        html {
+            background-color: royalblue;
         }
 
         input {
             margin-top: 50%;
         }
+
+        img {
+            position: absolute;
+            top: 10px;
+            right: 480px;
+
+        }
     </style>
 </head>
+
 <body>
 
 
 <fieldset>
-    <legend>Registration</legend>
+    <h2>Sign up</h2>
     <form action="reg" method="post">
         <input style="margin-top: 5%" type="text" placeholder="Enter your name" name="name"/>
 
@@ -38,12 +49,13 @@
 
         <input style="margin-top: 5%" type="password" placeholder="Enter password" name="password"/>
         <input style="margin-top: 5%" type="password" placeholder="Confirm password" name="confirm_pass"/>
-        <button class="button-lg button-warning" style="margin-top: 5%" type="button">Send</button>
-        <a style="margin-top: 20%" href="localhost:8080/reg_google">Войти через Google</a>
+        <button class="button-lg button-info" style="margin-top: 5%" type="button">Send</button>
 
     </form>
 
+
 </fieldset>
+<img src="https://i.pinimg.com/originals/76/fd/da/76fdda745478d89216b62322283953cd.gif">
 <script src="https://cdn.shoelace.style/1.0.0-beta.25/shoelace.js"></script>
 </body>
 </html>
